# COS40006

./: .gitignore  README.md  pyproject.toml  requirements.txt  speech.py
sample/: pipeline_example.json  pipeline_example.py  pipeline_speech.json
src/: main.py
src/cos40006/: database_setup.py  temp_reminders.py
src/cos40006.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cos40006/elements/: console_output_element.py  context.py  emotion_detection_element.py  llm_element.py  pipeline_orchestrator.py  recurring_reminder_manager.py  reminder_scheduler.py  reminder_subsystem_element.py  reminders_manager.py  snooze_reminder_manager.py  speech_to_text_element.py  test_reminders_manager.py  test_speech_to_text_element.py  test_text_to_speech_element.py  text_to_speech_element.py  text_to_speech_pipeline.json  voice_assistant_pipeline.json
src/cos40006/llm/: testllm.py
src/cos40006/pipelines/: elements.py  emotion_detection_element.py  emotion_pipeline.json  llm_pipeline.json  pipeline_example.json  reminder_pipeline.json  speech_to_text_pipeline.json  text_to_speech_pipeline.json
src/cos40006/sample/: elements_template.py  pipeline_speech.py
src/cos40006/user_interface/: app.py
src/cos40006/user_interface/static/: styles.css
src/cos40006/user_interface/templates/: index.html
src/elements/: emotion_detection_element.py  llm_router_element.py  reminder_scheduler.py  reminder_subsystem_element.py  reminders.json  reminders_manager.py  test_reminders_manager.py
user_interface/templates/: index.html
