[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cos40006"
version = "0.1.0"
description = "CPTB - final year computer science project"
authors = [
    { name="Henry Sutton", email="103072963@student.swin.edu.au" },
    { name="Rafsun Al Mujib", email="103840186@student.swin.edu.au" },
    { name="Raitha Mehjabeen", email="103804629@student.swin.edu.au" },
    { name="Kazi Talha", email="103805790@student.swin.edu.au" },
    { name="Ankur Saha", email="103486797@student.swin.edu.au" },
    { name="MD Riaz Uddin", email="103802843@student.swin.edu.au" }
]

dependencies = [
    "aiko_services @ git+https://git@github.com/geekscape/aiko_services",
    "annotated-types==0.7.0",
    "asciimatics==1.15.0",
    "avro==1.11.3",
    "avro-validator==1.2.1",
    "blinker==1.8.2",
    "cachetools==5.5.0",
    "certifi==2024.7.4",
    "chardet==3.0.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "comtypes==1.4.6",
    "distlib==0.3.8",
    "Flask==3.0.3",
    "google-ai-generativelanguage==0.6.10",
    "google-api-core==2.20.0",
    "google-api-python-client==2.147.0",
    "google-auth==2.35.0",
    "google-auth-httplib2==0.2.0",
    "google-generativeai==0.8.2",
    "googleapis-common-protos==1.65.0",
    "googletrans==4.0.0rc1",
    "grpcio==1.66.2",
    "grpcio-status==1.66.2",
    "h11==0.9.0",
    "h2==3.2.0",
    "hpack==3.0.0",
    "hstspreload==2024.9.1",
    "httpcore==0.9.1",
    "httplib2==0.22.0",
    "httpx==0.13.3",
    "hyperframe==5.2.0",
    "idna==2.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "MarkupSafe==2.1.5",
    "numpy==1.26.4",
    "paho-mqtt==1.6.1",
    "pillow==10.2.0",
    "proto-plus==1.24.0",
    "protobuf==5.28.2",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.1",
    "PyAudio==0.2.14",
    "pydantic==2.9.2",
    "pydantic_core==2.23.4",
    "pyfiglet==1.0.2",
    "pyparsing==3.1.4",
    "pyperclip==1.8.2",
    "pypiwin32==223",
    "pyttsx3==2.91",
    "pywin32==306",
    "requests==2.31.0",
    "rfc3986==1.5.0",
    "rsa==4.9",
    "schedule==1.2.2",
    "six==1.16.0",
    "sniffio==1.3.1",
    "SpeechRecognition==3.10.4",
    "tqdm==4.66.5",
    "transitions==0.9.2",
    "typing_extensions==4.12.2",
    "uritemplate==4.1.1",
    "urllib3==2.2.2",
    "Wave==0.0.2",
    "wcwidth==0.2.13",
    "Werkzeug==3.0.4",
    "wrapt==1.16.0"
]
